# application-impl/src/main/java/ch/heigvd/amt/projet2/entities/EventEntity.java
@@ -1,0 +1,22 @@
+package ch.heigvd.amt.projet2.entities;
+
+import lombok.Data;
+
+import javax.persistence.*;
+import java.io.Serializable;
+
+@Data
+@Entity
+public class EventEntity implements Serializable {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private long id;
+
+    private String userName;
+    private String action;
+
+    @ManyToOne
+    private ApplicationEntity application;
+
+}
